# serializer version: 1
# name: test_hello
  'select 1 + 1'
# ---
# name: test_hello.1
  '''
  <html>
   <div>
    <style>
  
  
    td {
      text-align: right;
    }
    .xxx {
      color: red;
    }
    .solite-json-overflow {
      font-size: 0;
      color: transparent;
    }
    .solite-json-overflow::before {
      content: "…";
      font-size: 1rem;
      color: #666;
    }
  
    .solite-json-overflow::before::selection {
      color: transparent;
      background: transparent;
    }
  
  
  
    </style>
    <table>
     <thead>
      <tr style="text-align: center;">
       <th title=" ">
  1 + 1
       </th>
      </tr>
     </thead>
     <tbody>
      <tr>
       <td style="font-family: monospace">
  2
       </td>
      </tr>
     </tbody>
    </table>
    <div>
  1 column × 1 row
    </div>
   </div>
  </html>
  
  '''
# ---
# name: test_hello[error contents: incomplete]
  dict({
    'data': dict({
      'text/plain': '''
        error[1]: SQL logic error
          ┌─ <anonymous>:1:1
          │
        1 │ select 1 + 
          │ ^ incomplete input
        
  
      ''',
    }),
    'metadata': dict({
    }),
  })
# ---
# name: test_hello[error contents: wrong num args]
  dict({
    'data': dict({
      'text/plain': '''
        error[1]: SQL logic error
          ┌─ <anonymous>:1:8
          │
        1 │ select substr();
          │        ^^^^^^ wrong number of arguments to function substr()
        
  
      ''',
    }),
    'metadata': dict({
    }),
  })
# ---
